# minishell

./: .gitignore  CMakeLists.txt  Makefile  builtins.c  commands.c  echo.c  echo.h  echo0.c  env_and_exit_builtins.c  env_aux_functions.c  env_vars.c  err_and_exit.c  executes.c  ft_replace.c  main.c  main0.c  minishell.h  pieps.c  process_commands.c  redirections.c  syntax.c  text.txt  token_aux.c  tokenizer.c
incl/: minishell.h
libft/: Makefile  ft_atoi.c  ft_isspace.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_replace.c  ft_split.c  ft_strcmp.c  ft_strdup.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  get_next_line.c  get_next_line.h  libft.h  stupid_gnl_function.c
srcs/: builtin_exit.c  builtins.c  commands.c  env_export_unset_builtins.c  env_search_helper.c  err_and_exit.c  escape_chars.c  executes.c  expand_env_vars.c  expansion_aux_functions.c  export_unset_aux_functions.c  find_commands.c  list_helper_functions.c  main.c  pipes.c  prepwork.c  process_commands.c  redir_chars.c  redirections.c  set_fds.c  split_tokens.c  syntax.c  token_helper_functions.c  tokenizer.c  tokenizer_aux_functions.c
